# snake-mc-queen

./: README.md  benchmark_hamming.py  benchmark_monte.py  pyproject.toml
c_examples/: Justfile  c_examples.c  setup.py
cython_examples/: Justfile  cython_examples.c  cython_examples.pyx  main.c  pyproject.toml  setup.py
python_examples/: main.py  pyproject.toml
rust_examples/: Cargo.toml  pyproject.toml  rust_examples.pyi
rust_examples/src/: lib.rs
