[project]
name = "snake-mc-queen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.1",
    "numba>=0.61.2",
    "setuptools>=80.9.0",
]

[tool.uv.workspace]
members = [
    "hamming_py",
 "cython_examples",
]
